screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable */
/* Keep reset CSS to one minified line */
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}html,.reset{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */

/* Begin site styles below */
html {
  font-size: 1.125em; /* 18 / 16 = 1.125 */
  line-height: 1.2222222222em; /* 22 / 18 = 1.2222222222 */
  font-family: "Roboto Slab", sans-serif, Helvetica, Arial;
  text-decoration: none;
}
body {
  padding-top: 1.2222222222em; /* 22 / 18 = 1.2222222222 */
  padding-right: 6.1111111111em; /* 110 / 18 = 6.1111111111 */
  padding-left: 6.1111111111em; /* 110 / 18 = 6.1111111111 */
}

h1 {
  font-size: 2.3686111111em; /* 42.635 / 18 = 2.3686111111 */
  font-family: Pacifico, sans-serif, Helvetica, Arial;
  line-height: 1.0320159493em; /* 44 / 42.635 = 1.0320159493 */
  padding-bottom: 1.0320159493em; /* 44 / 42.635 = 1.0320159493 */
}
h2 {
  font-size: 1.7768888889em; /* 31.984 / 18 = 1.7768888889 */
  font-family: Pacifico, sans-serif, Helvetica, Arial;
  line-height: 1.3756878439em; /* 44 / 31.984 = 1.3756878439 */
}

p {
  padding-top: 1.2222222222em; /* 22 / 18 = 1.2222222222 */
  padding-bottom: 1.2222222222em; /* 22 / 18 = 1.2222222222 */
  line-height: 1.8333333333em; /* 33 / 18 = 1.8333333333 */
  font-family: Bitter;
}

label, input {
  display: block;
  margin-bottom: 0;
}
input {
  box-sizing: border-box;
  padding: 0.7222222222em; /* 13 / 18 = 0.7222222222 */
  border: 0;
  border-radius: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: 1em;
  background-color: #EEE;
}
input[type="submit"] {
  width: 50%;
  float: right;
  background: #cacaca;
  border-radius: 0.3em;
}
input:focus {
  background-color: rgba(119,119,119,0.33);
  transition: 0.4s;
}

li {
  padding-bottom: 0.6111111111em; /* 11 / 18 = 0.6111111111 */
  list-style-type: none;
}

#info-agree {
  padding-bottom: 1.2222222222em; /* 22 / 18 = 1.2222222222 */
}
#terms {
  font-size: 0.8888888889em; /* 16 / 18 = 0.8888888889 */
  line-height: 1.375em; /* 22 / 16 = 1.375 */
  font-weight: lighter;
  padding-bottom: 1.375em; /* 22 / 16 = 1.375 */
}
#submitted {
  font-size: 1.333em; /* 23.994 / 18 = 1.333 */
  font-weight: lighter;
  line-height: 1.375343836em; /* 33 / 23.994 = 1.375343836 */
  padding-bottom: 0.4584479453em; /* 11 / 23.994 = 0.4584479453 */
}
.red {
  color: #E91E63;
}
.green {
  color: #7CB342;
}
.flex-box-container {
  display: flex;
}


@media screen and (min-width: 320px) {
  body {
    padding-right: 13.75%; /* 44 / 375 = 0.1375% */
    padding-left: 13.75%; /* 44 / 375 = 0.1375% */
  }
  h1 {
    font-size: 1.7768888889em; /* 31.984 / 18 = 1.7768888889 */
    line-height: 1.0317658829em; /* 33 / 31.984 = 1.0317658829 */
    padding-bottom: 0.687843922em; /* 22 / 31.984 = 0.687843922 */
  }
  h2 {
    font-size: 1.333em; /* 23.994 / 18 = 1.333 */
    line-height: 1.375343836em; /* 33 / 23.994 = 1.375343836 */
  }

  #form input {
    width: 100%;
  }
  #form {
    padding-top: 1.2222222222em; /* 22 / 18 = 1.2222222222 */
    padding-bottom: 4.8888888889em; /* 88 / 18 = 4.8888888889 */
  }
  .flex-box-container {
    flex-direction: column;
  }
  .informaion,
  .form {
    width: 100%;
  }
}
@media screen and (min-width: 640px) {
  body {
    padding-right: 9.302325581%; /* 80 / 860 = 0.09302325581% */
    padding-left: 9.302325581%; /* 80 / 860 = 0.09302325581% */
  }

  #banner {
    background-image: url("media/iawu.jpg");
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
    padding-top: 60%;
  }
  #info-paragraph {
    background-color: white;
  }
  #passwd {
    padding-top: 0.6111111111em; /* 11 / 18 = 0.6111111111 */
  }
}
@media screen and (min-width: 860px) {
  h1 {
    font-size: 2.3686111111em; /* 42.635 / 18 = 2.3686111111 */
    line-height: 1.0320159493em; /* 44 / 42.635 = 1.0320159493 */
    padding-bottom: 0.5160079747em; /* 33 / 42.635 = 0.5160079747 */
  }
  h2 {
    font-size: 1.7768888889em; /* 31.984 / 18 = 1.7768888889 */
    line-height: 1.3756878439em; /* 44 / 31.984 = 1.3756878439 */
  }

  li:last-child {
    padding-bottom: 3.0555555556em; /* 55 / 18 = 3.0555555556 */
  }

  #banner {
    padding-top: 40%;
  }
  #information {
    float: left;
  }
  #passwd {
    padding-top: 1.2222222222em; /* 22 / 18 = 1.2222222222 */
  }
  .flex-box-container {
    flex-direction: row;
  }
  .informaion,
  .form,
  .welcome {
    width: 50%;
  }
  .informaion {
    padding-bottom: 3.6666666667em; /* 66 / 18 = 3.6666666667 */
  }
}

